// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`readme test adapter balance endpoint should reply with success 1`] = `
Object {
  "data": Object {
    "responses": Array [
      Object {
        "description": "Successful request",
        "payload": Object {
          "address": Object {
            "address": "3EyjZ6CtEZEKyc719NZMyWaJpJG5jsVJL1",
          },
          "blockNumber": "693286",
          "blockchainId": "408fa195a34b533de9ad9889f076045e",
          "timestamp": "2021-07-29T20:54:39.000Z",
          "timestampNanoseconds": 0,
          "value": "2188",
        },
        "status": 200,
        "title": "OK",
      },
    ],
    "result": Array [
      Object {
        "address": "3EyjZ6CtEZEKyc719NZMyWaJpJG5jsVJL1",
        "balance": "2188",
        "chain": "mainnet",
        "coin": "btc",
      },
    ],
  },
  "jobRunID": "1",
  "result": Array [
    Object {
      "address": "3EyjZ6CtEZEKyc719NZMyWaJpJG5jsVJL1",
      "balance": "2188",
      "chain": "mainnet",
      "coin": "btc",
    },
  ],
  "statusCode": 200,
}
`;

exports[`readme test adapter marketcap endpoint should reply with success 1`] = `
Object {
  "data": Object {
    "marketcap": 1000000000,
    "result": 1000000000,
  },
  "jobRunID": "1",
  "result": 1000000000,
  "statusCode": 200,
}
`;

exports[`readme test adapter marketcap endpoint should reply with success when called with \`mc\` 1`] = `
Object {
  "data": Object {
    "marketcap": 1000000000,
    "result": 1000000000,
  },
  "jobRunID": "1",
  "result": 1000000000,
  "statusCode": 200,
}
`;

exports[`readme test adapter price endpoint should reply with success 1`] = `
Object {
  "data": Object {
    "price": 123456,
    "result": 123456,
  },
  "jobRunID": "1",
  "result": 123456,
  "statusCode": 200,
}
`;

exports[`readme test adapter price endpoint should reply with success when called with \`convert\` 1`] = `
Object {
  "data": Object {
    "price": 123456,
    "result": 123456,
  },
  "jobRunID": "1",
  "result": 123456,
  "statusCode": 200,
}
`;
